--- a/RODOBRAS.HTML
+++ b/RODOBRAS.HTML
@@ -59,35 +59,34 @@
             <div class="col-md-12">
                 <section id="gallery">
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <!-- Aplique o estilo para diminuir ainda mais o tamanho da fonte -->
-                            <h4 class="display-4 my-4 text-uppercase text-center" style="font-size: 36px;">
+                            <h4 class="display-4 my-4 text-uppercase" style="font-size: 36px;">
                                 <strong>TELEFONE - WHATSAPP:</strong> <br><br> <strong>(99) 9 9999-9999</strong>
                             </h4>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <!-- Use a classe img-fluid do Bootstrap para tornar as imagens responsivas -->
                             <img src="https://i.imgur.com/6GRZxjG.jpg" alt="Image 1" class="img-fluid" />
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <img src="https://i.imgur.com/r55IGW6.jpg" alt="Image 2" class="img-fluid" />
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <img src="https://i.imgur.com/XJYlyAv.jpg" alt="Image 3" class="img-fluid" />
                         </div>
-                        <div class="col-12">
-                            <iframe width="100%" height="428" src="https://www.youtube.com/embed/d-a5L4WfWQI?si=5iQStsG6pfUHxzV2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                            allowfullscreen></iframe>
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
+                            <iframe width="100%" height="428" src="https://www.youtube.com/embed/d-a5L4WfWQI?si=5iQStsG6pfUHxzV2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <img src="https://i.imgur.com/YTcv5ON.jpg" alt="Image 4" class="img-fluid" />
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <img src="https://i.imgur.com/1Ff4FQ8.jpg" alt="Image 5" class="img-fluid" />
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 text-center"> <!-- Add text-center class here -->
                             <img src="https://i.imgur.com/S9eaF40.jpg" alt="Image 6" class="img-fluid" />
                         </div>
                     </div>
@@ -98,3 +97,6 @@
 </body>
 
 </html>
+
+                        
+                     
