--- a/RODOBRAS.HTML
+++ b/RODOBRAS.HTML
@@ -84,10 +84,10 @@
                             <img src="https://i.imgur.com/YTcv5ON.jpg" alt="Image 4" class="img-fluid" />
                         </div>
                         <div class="col-12 text-center"> <!-- Add text-center class here -->
-                            <img src="https://i.imgur.com/1Ff4FQ8.jpg" alt="Image 5" class="img-fluid" />
+                            <img src="https://i.imgur.com/TKlgtdF.jpg" alt="Image 5" class="img-fluid" />
                         </div>
                         <div class="col-12 text-center"> <!-- Add text-center class here -->
-                            <img src="https://i.imgur.com/S9eaF40.jpg" alt="Image 6" class="img-fluid" />
+                            <img src="https://i.imgur.com/MxkVZxt.jpg" alt="Image 6" class="img-fluid" />
                         </div>
                     </div>
                 </section>
