--- a/RODOBRAS.HTML
+++ b/RODOBRAS.HTML
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="text-center">
-                            <span id="ivl6j"><strong>BR-316 KM 551,6 (Ao lado do Posto Cacique 26)</strong></span>
+                            <span id="ivl6j"><strong>BR-316 KM 551,6 (Ao lado do Posto Cacique)</strong></span>
                         </h3>
                     </div>
                 </div>
