--- a/RODOBRAS.HTML
+++ b/RODOBRAS.HTML
@@ -74,7 +74,7 @@
         <img src="https://i.imgur.com/3tRNi89.png" alt="WhatsApp">
     </a>
     <h4 class="display-4 my-4 text-uppercase" style="font-size: 48px;">
-        <strong>"OU CLIQUE NO ÍCONE PARA FALAR CONOSCO"</strong></h4></div>
+        <strong>"CLIQUE NO ÍCONE PARA FALAR CONOSCO"</strong></h4></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
