--- a/RODOBRAS.HTML
+++ b/RODOBRAS.HTML
@@ -71,7 +71,7 @@
         <!-- Botão do WhatsApp flutuante -->
         <div class="whatsapp-button text-center">
     <a href="https://wa.me/5511965068458" target="_blank">
-        <img src="https://i.imgur.com/3tRNi89.png" alt="WhatsApp">
+        <img src="https://i.imgur.com/iAYQ3vg.png" alt="WhatsApp">
     </a>
     <h4 class="display-4 my-4 text-uppercase" style="font-size: 48px;">
         <strong>"CLIQUE NO ÍCONE PARA FALAR CONOSCO"</strong></h4></div>
