--- a/RODOBRAS.HTML
+++ b/RODOBRAS.HTML
@@ -96,7 +96,7 @@
                                 <iframe width="100%" height="428" src="https://www.youtube.com/embed/d-a5L4WfWQI?si=5iQStsG6pfUHxzV2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                             <div class="col-12 text-center"> <!-- Add text-center class here -->
-                                <img src="https://i.imgur.com/rQnRwCP.jpg" alt="Image 4" class="img-fluid" />
+                                <img src="https://i.imgur.com/wNV7mj5.jpg" alt="Image 4" class="img-fluid" />
                             </div>
                             <div class="col-12 text-center"> <!-- Add text-center class here -->
                                 <img src="https://i.imgur.com/TKlgtdF.jpg" alt="Image 5" class="img-fluid" />
