--- a/MAPALOG.html
+++ b/MAPALOG.html
@@ -84,19 +84,19 @@
                         <div class="row">
                             <div class="col-12 text-center"> <!-- Add text-center class here -->
                                 <!-- Use a classe img-fluid do Bootstrap para tornar as imagens responsivas -->
-                            <img src="https://i.imgur.com/eFK7HSh.jpg" alt="Image 1" class="img-fluid" />
+                            <img src="https://i.imgur.com/Ll1uCgG.jpg" alt="Image 1" class="img-fluid" />
                         </div>
                         <div class="col-12">
                             <img src="https://i.imgur.com/QhDibfF.jpg" alt="Image 2" class="img-fluid" />
                         </div>
                         <div class="col-12">
-                            <img src="https://i.imgur.com/zmCVyll.jpg" alt="Image 3" class="img-fluid" />
+                            <img src="https://i.imgur.com/eFK7HSh.jpg" alt="Image 3" class="img-fluid" />
                         </div>
                         <div class="col-12">
                             <iframe width="100%" height="428" src="https://www.youtube.com/embed/C3Ia4HywYOA?si=NOZAuE_AkwPju5kN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         </div>
                         <div class="col-12 text-center"> <!-- Add text-center class here -->
-                            <img src="https://i.imgur.com/kxUFSjH.jpg" alt="Image 4" class="img-fluid" />
+                            <img src="https://i.imgur.com/MMYhxWJ.jpg" alt="Image 4" class="img-fluid" />
                         </div>
                         <div class="col-12">
                             <img src="https://i.imgur.com/2ikJ92m.jpg" alt="Image 5" class="img-fluid" />
@@ -112,6 +112,15 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+  
 
 
 
